--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Too do List</title>
+    <title>To-Do List</title>
   </head>
   <body>
     <div id="app"></div>
